[gd_scene load_steps=5 format=3 uid="uid://d0qt18pkwc3i1"]

[ext_resource type="Script" uid="uid://tji8daad4v5b" path="res://scripts/railing.gd" id="1_8a6kn"]
[ext_resource type="Texture2D" uid="uid://drhortmeesq3w" path="res://sprites/Railing.PNG" id="2_q6y0q"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_aghi4"]
size = Vector2(1199.9996, 254.9997)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l6vqv"]
size = Vector2(120, 3)

[node name="Railing" type="StaticBody2D"]
collision_layer = 0
script = ExtResource("1_8a6kn")
metadata/tile_map = NodePath("")

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = 3
scale = Vector2(0.1, 0.1)
texture = ExtResource("2_q6y0q")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.00024414063, -49.250015)
scale = Vector2(0.1, 0.1)
shape = SubResource("RectangleShape2D_aghi4")
one_way_collision = true

[node name="ObjectDetector" type="Area2D" parent="."]
position = Vector2(0, 1)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="ObjectDetector"]
position = Vector2(0, -181.5)
shape = SubResource("RectangleShape2D_l6vqv")

[connection signal="body_entered" from="ObjectDetector" to="." method="_on_object_detector_body_entered"]
[connection signal="body_exited" from="ObjectDetector" to="." method="_on_object_detector_body_exited"]
